@@ -24,46 +24,52 @@ import static org.junit.Assert.assertTrue;
 
 import java.io.File;
 import java.io.IOException;
+import java.util.LinkedList;
 import java.util.List;
 import java.util.Properties;
 
 import org.apache.commons.lang.NullArgumentException;
 import org.apache.zeppelin.conf.ZeppelinConfiguration;
 import org.apache.zeppelin.conf.ZeppelinConfiguration.ConfVars;
+import org.apache.zeppelin.dep.Dependency;
+import org.apache.zeppelin.dep.DependencyResolver;
 import org.apache.zeppelin.interpreter.mock.MockInterpreter1;
 import org.apache.zeppelin.interpreter.mock.MockInterpreter2;
 import org.junit.After;
 import org.junit.Before;
 import org.junit.Test;
+import org.sonatype.aether.RepositoryException;
 
 public class InterpreterFactoryTest {
 
-	private InterpreterFactory factory;
+  private InterpreterFactory factory;
   private File tmpDir;
   private ZeppelinConfiguration conf;
   private InterpreterContext context;
+  private DependencyResolver depResolver;
 
   @Before
-	public void setUp() throws Exception {
+  public void setUp() throws Exception {
     tmpDir = new File(System.getProperty("java.io.tmpdir")+"/ZeppelinLTest_"+System.currentTimeMillis());
     tmpDir.mkdirs();
     new File(tmpDir, "conf").mkdirs();
 
     MockInterpreter1.register("mock1", "org.apache.zeppelin.interpreter.mock.MockInterpreter1");
-	  MockInterpreter2.register("mock2", "org.apache.zeppelin.interpreter.mock.MockInterpreter2");
+    MockInterpreter2.register("mock2", "org.apache.zeppelin.interpreter.mock.MockInterpreter2");
 
-	  System.setProperty(ConfVars.ZEPPELIN_HOME.getVarName(), tmpDir.getAbsolutePath());
-	  System.setProperty(ConfVars.ZEPPELIN_INTERPRETERS.getVarName(), "org.apache.zeppelin.interpreter.mock.MockInterpreter1,org.apache.zeppelin.interpreter.mock.MockInterpreter2");
-	  conf = new ZeppelinConfiguration();
-	  factory = new InterpreterFactory(conf, new InterpreterOption(false), null);
-	  context = new InterpreterContext("note", "id", "title", "text", null, null, null, null);
+    System.setProperty(ConfVars.ZEPPELIN_HOME.getVarName(), tmpDir.getAbsolutePath());
+    System.setProperty(ConfVars.ZEPPELIN_INTERPRETERS.getVarName(), "org.apache.zeppelin.interpreter.mock.MockInterpreter1,org.apache.zeppelin.interpreter.mock.MockInterpreter2");
+    conf = new ZeppelinConfiguration();
+    depResolver = new DependencyResolver(tmpDir.getAbsolutePath() + "/local-repo");
+    factory = new InterpreterFactory(conf, new InterpreterOption(false), null, null, depResolver);
+    context = new InterpreterContext("note", "id", "title", "text", null, null, null, null, null, null);
 
-	}
+  }
 
-	@After
-	public void tearDown() throws Exception {
-	  delete(tmpDir);
-	}
+  @After
+  public void tearDown() throws Exception {
+    delete(tmpDir);
+  }
 
   private void delete(File file){
     if(file.isFile()) file.delete();
@@ -78,34 +84,34 @@ public class InterpreterFactoryTest {
     }
   }
 
-	@Test
-	public void testBasic() {
-	  List<String> all = factory.getDefaultInterpreterSettingList();
+  @Test
+  public void testBasic() {
+    List<String> all = factory.getDefaultInterpreterSettingList();
 
-		// get interpreter
-		Interpreter repl1 = factory.get(all.get(0)).getInterpreterGroup().getFirst();
-		assertFalse(((LazyOpenInterpreter) repl1).isOpen());
-		repl1.interpret("repl1", context);
-		assertTrue(((LazyOpenInterpreter) repl1).isOpen());
+    // get interpreter
+    Interpreter repl1 = factory.get(all.get(0)).getInterpreterGroup().getFirst();
+    assertFalse(((LazyOpenInterpreter) repl1).isOpen());
+    repl1.interpret("repl1", context);
+    assertTrue(((LazyOpenInterpreter) repl1).isOpen());
 
-		// try to get unavailable interpreter
-		assertNull(factory.get("unknown"));
+    // try to get unavailable interpreter
+    assertNull(factory.get("unknown"));
 
-		// restart interpreter
-		factory.restart(all.get(0));
-		repl1 = factory.get(all.get(0)).getInterpreterGroup().getFirst();
-		assertFalse(((LazyOpenInterpreter) repl1).isOpen());
-	}
+    // restart interpreter
+    factory.restart(all.get(0));
+    repl1 = factory.get(all.get(0)).getInterpreterGroup().getFirst();
+    assertFalse(((LazyOpenInterpreter) repl1).isOpen());
+  }
 
   @Test
-  public void testFactoryDefaultList() throws IOException {
+  public void testFactoryDefaultList() throws IOException, RepositoryException {
     // get default list from default setting
     List<String> all = factory.getDefaultInterpreterSettingList();
     assertEquals(2, all.size());
     assertEquals(factory.get(all.get(0)).getInterpreterGroup().getFirst().getClassName(), "org.apache.zeppelin.interpreter.mock.MockInterpreter1");
 
     // add setting
-    factory.add("a mock", "mock2", new InterpreterOption(false), new Properties());
+    factory.add("a mock", "mock2", new LinkedList<Dependency>(), new InterpreterOption(false), new Properties());
     all = factory.getDefaultInterpreterSettingList();
     assertEquals(2, all.size());
     assertEquals("mock1", factory.get(all.get(0)).getName());
@@ -113,16 +119,16 @@ public class InterpreterFactoryTest {
   }
 
   @Test
-  public void testExceptions() throws IOException {
+  public void testExceptions() throws InterpreterException, IOException, RepositoryException {
     List<String> all = factory.getDefaultInterpreterSettingList();
     // add setting with null option & properties expected nullArgumentException.class
     try {
-      factory.add("a mock", "mock2", null, new Properties());
+      factory.add("a mock", "mock2", new LinkedList<Dependency>(), null, new Properties());
     } catch(NullArgumentException e) {
-        assertEquals("Test null option" , e.getMessage(),new NullArgumentException("option").getMessage());
-      }
+      assertEquals("Test null option" , e.getMessage(),new NullArgumentException("option").getMessage());
+    }
     try {
-      factory.add("a mock" , "mock2" , new InterpreterOption(false),null);
+      factory.add("a mock", "mock2", new LinkedList<Dependency>(), new InterpreterOption(false), null);
     } catch (NullArgumentException e){
       assertEquals("Test null properties" , e.getMessage(),new NullArgumentException("properties").getMessage());
     }
@@ -130,17 +136,17 @@ public class InterpreterFactoryTest {
 
 
   @Test
-  public void testSaveLoad() throws InterpreterException, IOException {
+  public void testSaveLoad() throws IOException, RepositoryException {
     // interpreter settings
     assertEquals(2, factory.get().size());
 
     // check if file saved
     assertTrue(new File(conf.getInterpreterSettingPath()).exists());
 
-    factory.add("newsetting", "mock1", new InterpreterOption(false), new Properties());
+    factory.add("newsetting", "mock1", new LinkedList<Dependency>(), new InterpreterOption(false), new Properties());
     assertEquals(3, factory.get().size());
 
-    InterpreterFactory factory2 = new InterpreterFactory(conf, null);
+    InterpreterFactory factory2 = new InterpreterFactory(conf, null, null, null, depResolver);
     assertEquals(3, factory2.get().size());
   }
 }
